# hacspec

./: Cargo.toml  Language.md  rust-toolchain
coq/src/: Hacspec_Bls12_381.v  Hacspec_P256.v
examples/: typecheck_examples.sh
examples/bls12-381/: Cargo.toml
examples/bls12-381/src/: hacspec-bls12-381.rs
examples/chacha20poly1305/src/: hacspec-chacha20poly1305.rs
examples/ed25519/src/: ed25519.rs
examples/p256/src/: hacspec-p256.rs
examples/sha384/: Cargo.toml
examples/sha384/src/: sha384.rs
examples/sha384/tests/: test_sha384.rs
language/: Cargo.toml  rust-toolchain
language/src/: ast_to_rustspec.rs  hir_to_rustspec.rs  main.rs  name_resolution.rs  rustspec.rs  rustspec_to_coq.rs  rustspec_to_easycrypt.rs  rustspec_to_fstar.rs  typechecker.rs
lib/: Cargo.toml
lib/src/: array.rs  lib.rs  machine_integers.rs  math_integers.rs  prelude.rs  seq.rs  traits.rs  vec_util.rs
lib/src/math_util/: ct_poly.rs
utils/abstract-integers/: Cargo.toml
utils/abstract-integers/src/: abstract_int.rs  lib.rs  nat_mod.rs
