[package]
name = "hacspec-sha384"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Kasper S. Nielsen <ksn@cs.au.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/sha384.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }





